--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -1,321 +1,515 @@
-#logo { 
-	margin-top: 15px;
-	margin-bottom: 5px; 
+#logo {
+    margin-top: 15px;
+    margin-bottom: 5px;
 }
+
 #top-bar {
-	background: #505050;
+    background: #505050;
 }
+
 #top_buttons {
-	padding: 18px 0px;
+    padding: 18px 0;
 }
+
 #top_buttons a {
-	color: #505050;
-	font-weight: 600;
-	font-size: 16px;
-	padding: 5px;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 5px;
+    color: #505050;
 }
 
 #top_buttons a:hover {
-	color: #3acf87;
+    color: #3acf87;
 }
+
 .menu {
-	margin: 0;
-	background-color: #505050;
+    margin: 0;
+    background-color: #505050;
 }
+
 .item-description {
-	padding: 10px 0px 10px 0px;
+    padding: 10px 0 10px 0;
 }
-.item-description h5, .item-description span, .product h5, .product span {
-	display: block;
-	padding: 5px 10px 5px 10px;
-	line-height: 15px;
+
+.item-description h5,
+.item-description span,
+.product h5,
+.product span {
+    line-height: 15px;
+    display: block;
+    overflow: hidden;
     min-height: 28px;
     max-height: 28px;
-    overflow: hidden;
+    padding: 5px 10px 5px 10px;
 }
+
 .product span {
     display: block;
 }
+
 .product section {
-	padding: 3px 0 3px 0;
+    padding: 3px 0 3px 0;
 }
 
 .hide-top-search {
-	display: none;
+    display: none;
 }
+
 .img-caption figcaption {
-	padding: 17px 0px 17px 5px;
+    padding: 17px 0 17px 5px;
 }
 
 @media only screen and (max-width: 767px) {
-	.custom_column {
-		width: 144px!important;
-	    margin-right: 3px!important;
-	    margin-left: 3px!important;
-	}
-	.product h5 {
-		font-size: 15px;
-	}
-	.product span {
-		text-overflow: ellipsis;
-	    white-space: nowrap;
-	    overflow: hidden;
-	    display: block;
-	}
-	.product section {
-		padding: 3px 0 3px 0;
-    	padding-left: 5px;
-	}
-	.product .product-category {
-		word-break: break-word;
-		font-weight: 600;
-		padding: 0px 6px 2px 0px;
-	}
-	.product .product-price {
-		padding: 0px 6px 6px 0px;
-		white-space: nowrap;
-	}
-	.item-description span {
-		font-size: 11px;
-		font-weight: 500;
-	}
-	.item-description h5 {
-		font-size: 14px;
-	}
-	a.menu-trigger {
-		width: auto;
-		padding-right: 15px;
-		background: #505050;
-	}
-	#cart, .top-search {
-		margin: 18px 0 0 0;
-	}
-	.hide-top-search {
-		display: block;
-	}
+    .custom_column {
+        width: 144px!important;
+        margin-right: 3px!important;
+        margin-left: 3px!important;
+    }
+    .product h5 {
+        font-size: 15px;
+    }
+    .product span {
+        display: block;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+    .product section {
+        padding: 3px 0 3px 0;
+        padding-left: 5px;
+    }
+    .product .product-category {
+        font-weight: 600;
+        padding: 0 6px 2px 0;
+        word-break: break-word;
+    }
+    .product .product-price {
+        padding: 0 6px 6px 0;
+        white-space: nowrap;
+    }
+    .item-description span {
+        font-size: 11px;
+        font-weight: 500;
+    }
+    .item-description h5 {
+        font-size: 14px;
+    }
+    a.menu-trigger {
+        width: auto;
+        padding-right: 15px;
+        background: #505050;
+    }
+    #cart,
+    .top-search {
+        margin: 18px 0 0 0;
+    }
+    .hide-top-search {
+        display: block;
+    }
+}
 
-}
 @media only screen and (max-width: 767px) and (min-width: 480px) {
-	.custom_column {
-		width: 200px!important;
-	    margin-right: 5px!important;
-	    margin-left: 5px!important;
-	}
-	.top-search input {
-		width: 153px;
-	}
-	/*.item-description h5, .item-description span, .product h5, .product span {
-		line-height: 15px;
-	    min-height: 28px;
-	    max-height: 28px;
-	    overflow: hidden;
-	}*/
+    .custom_column {
+        width: 200px!important;
+        margin-right: 5px!important;
+        margin-left: 5px!important;
+    }
+    .top-search input {
+        width: 153px;
+    }
+    /*.item-description h5, .item-description span, .product h5, .product span {
+        line-height: 15px;
+        min-height: 28px;
+        max-height: 28px;
+        overflow: hidden;
+    }*/
 }
+
 .selectric {
-	min-width: 240px;
+    min-width: 240px;
 }
+
 .width-100 {
-	width: 100%;
+    width: 100%;
 }
-.tp-banner, .tp-bgimg, .home-slider {
-	max-height: 450px!important;
+
+.tp-banner,
+.tp-bgimg,
+.home-slider {
+    max-height: 380px!important;
 }
+
 .help-block {
-	color: red;
+    color: red;
 }
-.input_id_phone, .input_id_city, .input_id_image, .input_idphone, .input_id_bio {
-	display: none;
+
+.input_id_phone,
+.input_id_city,
+.input_id_image,
+.input_idphone,
+.input_id_bio {
+    display: none;
 }
+
 .blue {
-	background: #2db2ea!important;
+    background: #2db2ea!important;
 }
+
 h5 {
-	line-height: 34px;
+    line-height: 34px;
 }
+
 .product section h5 {
-    word-break: break-word;
     line-height: 22px;
+    overflow: hidden;
     min-height: 44px;
     max-height: 44px;
-    overflow: hidden;
+    word-break: break-word;
 }
+
 .product-price-discount {
-	padding: 1px 0 5px 0;
+    padding: 1px 0 5px 0;
 }
+
 .product-price-discount i {
-	margin: -4px 0px -4px 5px;
-	padding: 4px 5px;
+    margin: -4px 0 -4px 5px;
+    padding: 4px 5px;
 }
+
 .active-link {
-	color: #3acf87!important;
+    color: #3acf87!important;
 }
+
+
 /*
 nav shit and etc, shop_tree display inline-block
 */
+
 #categories li {
-	line-height: 23px;
+    line-height: 23px;
 }
-#categories > li  {
-	border-bottom: 1px solid #eee;
+
+#categories > li {
+    border-bottom: 1px solid #eee;
 }
+
 #categories .active-li {
-	/*background-color: #3acf87;*/
+    /*background-color: #3acf87;*/
 }
+
 #categories li li a.active:hover {
-	color: #777;
+    color: #777;
 }
 
 #categories li a {
-	border-bottom: none;
-	white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
     width: 72%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    border-bottom: none;
 }
-#categories li ul li a, #categories li ul li a:hover {
-	padding: 3px 3px 4px 25px;
-	width: 70%;
+
+#categories li ul li a,
+#categories li ul li a:hover {
+    width: 70%;
+    padding: 3px 3px 4px 25px;
 }
 
 #categories li a.active {
-	background-color: transparent!important;
-	color: #3acf87;
-	font-weight: 600;
-}
-#categories li > a:hover {
+    font-weight: 600;
+    color: #3acf87;
     background-color: transparent!important;
+}
+
+#categories li a:hover {
+    margin-left: 10px;
     color: #777;
-    padding-left: 15px;
+    background-color: transparent!important;
 }
 
 .open_nav {
-	font-family: FontAwesome;
-	width: 20px;
+    font-family: FontAwesome;
+    line-height: 30px;
+    float: right;
+    width: 20px;
     height: 20px;
-	float: right;
-	cursor: pointer;
-	line-height: 30px;
+    cursor: pointer;
 }
-.open_nav::after {
 
+li.child-1 > .open_nav {
+    line-height: 46px;
 }
 
 ul.widget-tabs > li:hover {
-	border-bottom: 1px solid #a0a0a0;
-	padding-left: 7px;
-}
-p, .widget-text {
-	word-wrap: break-word;
+    padding-left: 7px;
+    border-bottom: 1px solid #a0a0a0;
 }
 
-.footer-links > li > a{
-	display: inline;
+p,
+.widget-text {
+    word-wrap: break-word;
 }
+
+.footer-links > li > a {
+    display: inline;
+}
+
 .footer-links > li {
-	padding-top: 6px;
+    padding-top: 6px;
 }
+
 
 /* dropdown menu */
+
 li.dropdown ul li ul {
-	left: 198px;
+    left: 198px;
 }
+
 .menu > li .current {
-	color: #fff;
+    color: #fff;
 }
 
 #jPanelMenu-menu li li a {
-	padding-left: 30px;
+    padding-left: 30px;
 }
 
 @media only screen and (max-width: 766px) {
-	#jPanelMenu-menu > li > a {
-		border-bottom: 1px solid #5a5a5a;
-	}
-	.active_branch ul {
-		display: block!important;
-	}
-	ul.dropdown-menu > li > a {
-		padding-left: 15px!important;
-	}
-	
-	ul.dropdown-menu > li ul {
-		display: none;
-	}
-
-	ul.dropdown-menu > li ul a {
-		padding-left: 35px!important;
-		border-bottom: 1px solid #5a5a5a;
-	}
-
-	ul.dropdown-menu > li ul li ul a {
-		padding-left: 55px!important;
-		border-bottom: 1px solid #5a5a5a;
-	}
-	.caret {
-		display: inline-block;
-		float: right;
-	    width: 0;
-	    height: 0;
-	    margin-left: 2px;
-	    vertical-align: middle;
-	    border-top: 4px solid;
-	    border-right: 4px solid transparent;
-	    border-left: 4px solid transparent;
-	}
+    #jPanelMenu-menu > li > a {
+        border-bottom: 1px solid #5a5a5a;
+    }
+    .active_branch ul {
+        display: block!important;
+    }
+    ul.dropdown-menu > li > a {
+        padding-left: 15px!important;
+    }
+    ul.dropdown-menu > li ul {
+        display: none;
+    }
+    ul.dropdown-menu > li ul a {
+        padding-left: 35px!important;
+        border-bottom: 1px solid #5a5a5a;
+    }
+    ul.dropdown-menu > li ul li ul a {
+        padding-left: 55px!important;
+        border-bottom: 1px solid #5a5a5a;
+    }
+    .caret {
+        display: inline-block;
+        float: right;
+        width: 0;
+        height: 0;
+        margin-left: 2px;
+        vertical-align: middle;
+        border-top: 4px solid;
+        border-right: 4px solid transparent;
+        border-left: 4px solid transparent;
+    }
 }
 
 .disabled {
-	opacity: 0.2;
+    opacity: .2;
 }
 
 .disabled:hover {
-	cursor: not-allowed;
-	background-color: #2f2f2f!important;
+    cursor: not-allowed;
+    background-color: #2f2f2f!important;
 }
 
 .product-author {
-	background-color: #f4f4f4;
-    padding: 15px; 
     overflow: hidden;
+    padding: 15px;
+    background-color: #f4f4f4;
 }
 
 .product-author h3 {
-	line-height: 28px;
-}
-.product-author section h3:hover {
-	color: #3acf87;
+    line-height: 28px;
 }
 
+.product-author section h3:hover {
+    color: #3acf87;
+}
 
 .onoffswitch {
-    position: relative; width: 58px;
-    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+    position: relative;
+    width: 58px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
+
 .onoffswitch-checkbox {
     display: none!important;
 }
+
 .onoffswitch-label {
-    display: block; overflow: hidden; cursor: pointer;
-    height: 30px; padding: 0; line-height: 30px;
-    border: 2px solid #999999; border-radius: 30px;
-    background-color: #EEEEEE;
-    transition: background-color 0.3s ease-in;
+    line-height: 30px;
+    display: block;
+    overflow: hidden;
+    height: 30px;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color .3s ease-in;
+    border: 2px solid #999;
+    border-radius: 30px;
+    background-color: #eee;
 }
+
 .onoffswitch-label:before {
-    content: "";
-    display: block; width: 30px; margin: 0px;
-    background: #FFFFFF;
-    position: absolute; top: 0; bottom: 0;
+    position: absolute;
+    top: 0;
     right: 26px;
-    border: 2px solid #999999; border-radius: 30px;
-    transition: all 0.3s ease-in 0s; 
+    bottom: 0;
+    display: block;
+    width: 30px;
+    margin: 0;
+    content: '';
+    transition: all .3s ease-in 0s;
+    border: 2px solid #999;
+    border-radius: 30px;
+    background: #fff;
 }
+
 .onoffswitch-checkbox:checked + .onoffswitch-label {
-    background-color: #2EE8A7;
+    background-color: #2ee8a7;
 }
-.onoffswitch-checkbox:checked + .onoffswitch-label, .onoffswitch-checkbox:checked + .onoffswitch-label:before {
-   border-color: #2EE8A7;
-}
+
+.onoffswitch-checkbox:checked + .onoffswitch-label,
 .onoffswitch-checkbox:checked + .onoffswitch-label:before {
-    right: 0px; 
+    border-color: #2ee8a7;
 }
+
+.onoffswitch-checkbox:checked + .onoffswitch-label:before {
+    right: 0;
+}
+
+figure.blue-effect {
+    background: #dcffee;
+}
+
+figure.blue-effect:hover img {
+    opacity: 0.8;
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+figure.blue-effect img {
+    opacity: 1;
+    -moz-transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+}
+
+.portfolio-item img {
+    -moz-transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+}
+
+.portfolio-item:hover img {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+}
+
+.portfolio-item .hover-cover {}
+
+.hover-icon:before {
+    height: 19px;
+    width: 19px;
+    top: 12px;
+    left: 20px;
+    content: "\f105";
+    font-family: "FontAwesome";
+    position: relative;
+    font-size: xx-large;
+}
+
+#logo a img {
+    height: 100px;
+}
+
+ul.top-bar-menu li:hover a,
+ul.top-bar-menu li:hover i {
+    color: #2c9c66;
+    -webkit-transition: color 0.35s;
+    transition: color 0.35s;
+}
+
+#logo-menu {
+    float: right;
+    position: relative;
+    margin: 10px;
+}
+
+#logo-menu a {
+    color: white;
+}
+
+.create-shop,
+.enter-shop {
+    position: absolute;
+}
+
+.create-shop {
+    top: 5px;
+    left: 100px;
+}
+
+.enter-shop {
+    top: 84px;
+    left: 180px;
+    background-color: #008275;
+    padding: 5px 2px;
+}
+
+
+/*.share-buttons ul a,
+.tags a,
+.tabs-nav li a,
+a.menu-trigger,
+input[type="password"],
+input[type="email"],
+textarea,
+select,
+.caption-btn,
+.button {
+    border-radius: 4px;
+}
+
+.tp-rightarrow,
+input[type="text"],
+a.menu-trigger i {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.tp-leftarrow,
+.top-search button {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}*/
+
+.caption-btn {
+    -webkit-box-shadow: 0px 0px 27px -10px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 27px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 27px -10px rgba(0, 0, 0, 0.75);
+}
+
+
+/*.caption {*/
+
+
+/*max-width: 400px;*/
+
+
+/*}*/
