--- a/theme/templates/admin/includes/dropdown_menu.html
+++ b/theme/templates/admin/includes/dropdown_menu.html
@@ -21,8 +21,11 @@
 				<nav role="navigation" class="widget-body">
 					<ul class="acc-menu">
 						<li class="nav-separator"><span>Главное меню</span></li>
-						<li><a class="withripple" href="/admin/"><span class="icon">
-		<i class="material-icons">home</i></span><span>Мой профиль</span></a></li>
+						<li>
+							<a class="withripple" href="/admin/"><span class="icon">
+								<i class="material-icons">home</i></span><span>Настройки магазина</span>
+							</a>
+						</li>
 						<li class="nav-separator"><span>Дополнительное меню</span></li>
 						{% for app in dropdown_menu_app_list %}
 						<li class="hasChild">
