--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -143,13 +143,14 @@
     color: red;
 }
 
-.input_id_phone,
+
+/*.input_id_phone,
 .input_id_city,
 .input_id_image,
 .input_idphone,
 .input_id_bio {
     display: none;
-}
+}*/
 
 .blue {
     background: #2db2ea!important;
@@ -505,11 +506,588 @@ a.menu-trigger i {
     box-shadow: 0px 0px 27px -10px rgba(0, 0, 0, 0.75);
 }
 
+.badges {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 162px;
+    z-index: 99;
+}
 
-/*.caption {*/
+.product-discnt,
+.product-ready,
+.product-example {
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 5px 9px;
+    display: block;
+    /*position: absolute;*/
+    color: #fff;
+    z-index: 99;
+    float: right;
+    /*right: -7px;*/
+}
+
+.product-discnt {
+    background-color: #f94a46;
+    width: 60px;
+    /*top: 5px;*/
+}
+
+.product-example {
+    background-color: #3ac3cf;
+    /*top: 43px;*/
+}
+
+.product-ready {
+    background-color: #3acf87;
+    /*top: 81px;*/
+}
+
+.order-container {
+    overflow: auto;
+}
+
+.order-thumb {
+    float: left;
+    margin: 8px 0px;
+}
+
+.order-thumb img {
+    display: block;
+    width: 200px;
+    margin-bottom: 8px;
+}
+
+.order-info {
+    text-align: center;
+}
+
+.order-content {
+    margin-left: 210px
+}
+
+.order-content h2 {
+    line-height: 30px;
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0 0 2px 0;
+}
+
+.order-content h2 a {
+    color: #606060;
+}
+
+.order-content h2 a:hover {
+    color: #888;
+}
+
+.order-desc {
+    min-height: 200px;
+}
+
+@media (max-width: 767px) {
+    .order-container {
+        display: grid;
+    }
+    .order-content {
+        margin-left: 0
+    }
+    .order-thumb {
+        text-align: center;
+    }
+    .order-thumb img {
+        /*margin: 8px auto;*/
+        width: 300px;
+    }
+    .order-desc {
+        min-height: 50px;
+    }
+}
+
+.categories li a.active {
+    color: #3acf87!important;
+    padding-left: 3px;
+}
 
 
-/*max-width: 400px;*/
+/*.content-box.color-effect-1:hover h3,
+.content-box.color-effect-2:hover h3,
+.content-box.color-effect-3:hover h3,
+.content-box.color-effect-4:hover h3 {
+    background-color: white;
+    border-radius: 3px;
+}
+
+.content-box.color-effect-1:hover h3 {
+    color: #38c782;
+}
+
+.content-box.color-effect-2:hover h3 {
+    color: #0e83cd;
+}
+
+.content-box.color-effect-3:hover h3 {
+    color: #a558a6;
+}
+
+.content-box.color-effect-4:hover h3 {
+    color: #ffba35;
+}*/
+
+.icon-box h3 {
+    margin-left: 72px;
+    line-height: 22px;
+    margin-top: 12px;
+}
+
+.icon-box:hover h3 {
+    color: #808080;
+}
+
+.icon-box span.color-effect-1 {
+    background-color: #38c782;
+}
+
+.icon-box span.color-effect-2 {
+    background-color: #0e83cd;
+}
+
+.icon-box span.color-effect-3 {
+    background-color: #a558a6;
+}
+
+.icon-box span.color-effect-4 {
+    background-color: #ffba35;
+}
+
+.icon-box:hover span.color-effect-1 {
+    background-color: #3acf87;
+}
+
+.icon-box:hover span.color-effect-2 {
+    background-color: #3acf87;
+}
+
+.icon-box:hover span.color-effect-3 {
+    background-color: #3acf87;
+}
+
+.icon-box:hover span.color-effect-4 {
+    background-color: #3acf87;
+}
+
+.icon-box span.color-effect-1 i,
+.icon-box span.color-effect-2 i,
+.icon-box span.color-effect-3 i,
+.icon-box span.color-effect-4 i {
+    color: white;
+}
+
+.disabled span i,
+.disabled span,
+.disabled:hover span {
+    background-color: #f5f5f5!important;
+    color: #888!important;
+}
 
 
-/*}*/
+/* Bounce To Right */
+
+
+/*.hvr-bounce-to-right {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+.hvr-bounce-to-right:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #3acf87;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-bounce-to-right:hover, .hvr-bounce-to-right:focus, .hvr-bounce-to-right:active {
+  color: white;
+}
+.hvr-bounce-to-right:hover:before, .hvr-bounce-to-right:focus:before, .hvr-bounce-to-right:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+  -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+}
+
+.hvr-fade {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
+  background-color: #3acf87!important;
+  color: white;
+}*/
+
+.js .inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputfile + label {
+    max-width: 100%;
+    font-size: 1.25rem;
+    /* 20px */
+    font-weight: 700;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    /*padding: 0.625rem 1.25rem;*/
+    /* 10px 20px */
+}
+
+.no-js .inputfile + label {
+    display: none;
+}
+
+.inputfile:focus + label,
+.inputfile.has-focus + label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+.inputfile + label * {
+    /* pointer-events: none; */
+    /* in case of FastClick lib use */
+}
+
+
+/* style 1 */
+
+.inputfile-1 + label {
+    background-color: #c0c0c0;
+    border-top: 3px solid #c0c0c0;
+    border-bottom: 3px solid #c0c0c0;  
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.inputfile-1 + label span {
+    color: white;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 150px;
+}
+
+.inputfile-1:focus + label,
+.inputfile-1.has-focus + label,
+.inputfile-1 + label:hover {
+    background-color: #3acf87;
+    border-top: 3px solid #3acf87;
+    border-bottom: 3px solid #3acf87; 
+}
+
+
+/* style 4 */
+
+.inputfile-4 + label {
+    color: #d3394c;
+    float: right;
+    margin-right: 10px;
+}
+
+.inputfile-4 + label span {
+    margin-left: 15px;
+}
+
+
+/*.inputfile-1:focus + label,
+.inputfile-1.has-focus + label,
+.inputfile-1 + label:hover,
+.inputfile-4:focus + label,
+.inputfile-4.has-focus + label,
+.inputfile-4 + label:hover {
+    color: #3acf87;
+}*/
+
+.inputfile-4 + label figure {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #c0c0c0;
+    border: 2px solid #606060;
+    display: block;
+    padding: 5px;
+    margin: 0 auto 10px;
+}
+
+.inputfile-4 + label figure img {
+    border-radius: 50%;
+}
+
+.inputfile-4:focus + label figure,
+.inputfile-4.has-focus + label figure,
+.inputfile-4 + label:hover figure {
+    background-color: #3acf87;
+}
+
+.inputfile-4 + label svg {
+    width: 100%;
+    height: 100%;
+    fill: #f1e5e6;
+}
+
+
+/* style 5 */
+
+.inputfile-5 + label {
+    color: #d3394c;
+}
+
+.inputfile-5:focus + label,
+.inputfile-5.has-focus + label,
+.inputfile-5 + label:hover {
+    color: #722040;
+}
+
+.inputfile-5 + label figure {
+    width: 100px;
+    height: 135px;
+    background-color: #d3394c;
+    display: block;
+    position: relative;
+    padding: 30px;
+    margin: 0 auto 10px;
+}
+
+.inputfile-5:focus + label figure,
+.inputfile-5.has-focus + label figure,
+.inputfile-5 + label:hover figure {
+    background-color: #722040;
+}
+
+.inputfile-5 + label figure::before,
+.inputfile-5 + label figure::after {
+    width: 0;
+    height: 0;
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.inputfile-5 + label figure::before {
+    border-top: 20px solid #dfc8ca;
+    border-left: 20px solid transparent;
+}
+
+.inputfile-5 + label figure::after {
+    border-bottom: 20px solid #722040;
+    border-right: 20px solid transparent;
+}
+
+.inputfile-5:focus + label figure::after,
+.inputfile-5.has-focus + label figure::after,
+.inputfile-5 + label:hover figure::after {
+    border-bottom-color: #d3394c;
+}
+
+.background-image img {
+    height: 150px!important;
+    width: 100%!important;
+}
+
+.logo-image img {
+    width: 150px!important;
+    height: 150px!important;
+}
+
+textarea {
+    resize: none;
+    width: 90%;
+}
+
+.create_shop input[type="text"] {
+    width: 90%;
+}
+
+input[type="number"] {
+    padding: 10px 12px;
+    outline: none;
+    font-size: 13px;
+    color: #999;
+    margin: 0;
+    width: 75px;
+    /*float: right;*/
+    /*max-width: 100%;*/
+    background: #f5f5f5;
+    border: 1px solid #f5f5f5;
+    font-weight: 600;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
+
+.express {
+    float: left;
+    margin: 5px 0;
+    width: 100%;
+}
+
+.express_text,
+.express_price {
+    float: left;
+}
+
+.express_text {
+    width: 63%;
+}
+
+.express_price {
+    width: 37%;
+    text-align: center;
+}
+
+.control {
+    display: block;
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.control input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.control__indicator {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background: #f5f5f5;
+}
+
+.control--radio .control__indicator {
+    border-radius: 50%;
+}
+
+.control:hover input ~ .control__indicator,
+.control input:focus ~ .control__indicator {
+    background: #f2f2f2;
+}
+
+.control input:checked ~ .control__indicator {
+    background: #3acf87;
+}
+
+.control:hover input:not([disabled]):checked ~ .control__indicator,
+.control input:checked:focus ~ .control__indicator {
+    background: #3acf87;
+}
+
+.control input:disabled ~ .control__indicator {
+    background: #e6e6e6;
+    /*opacity: 0.6;*/
+    pointer-events: none;
+}
+
+.control__indicator:after {
+    content: '';
+    position: absolute;
+    display: none;
+}
+
+.control input:checked ~ .control__indicator:after {
+    display: block;
+}
+
+.control--checkbox .control__indicator:after {
+    left: 8px;
+    top: 4px;
+    width: 3px;
+    height: 8px;
+    border: solid #fff;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+.control--checkbox input:disabled ~ .control__indicator:after {
+    border-color: #7b7b7b;
+}
+
+input::placeholder {
+    color: #ccc;
+}
+
+input::-webkit-input-placeholder {
+    color: #ccc;
+}
+
+input::-moz-placeholder {
+    color: #ccc;
+}
+
+input:-ms-input-placeholder {
+    color: #ccc;
+}
+
+input:-moz-placeholder {
+    color: #ccc;
+}
+
+input.error {
+    border-bottom: 1px solid #ff7373;
+}
+.error {
+    color: #ff7373;
+}
+
+.product a.shopname {
+    color: #798185;
+}
+
+.product a.shopname:hover {
+    color: #777;
+    text-decoration: underline;
+}
