--- a/theme/templates/admin/includes/fieldset.html
+++ b/theme/templates/admin/includes/fieldset.html
@@ -1,5 +1,5 @@
 {% load theme_tags %}
-{% if fieldset.name != 'Другие товары' %}
+{% if fieldset.name != 'Метаданные' or request.user.is_superuser %}
 <fieldset class="module aligned {{ fieldset.classes }}">
   <div class="panel panel-midnightblue" data-widget='{"draggable": "false", "collapsed" : "true"}'>
   {% if fieldset.name %}
