--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -228,12 +228,12 @@
 		<div class="four columns">
 
 			<!-- Headline -->
-			<h3 class="headline footer">Личный кабинет</h3>
+			<h3 class="headline footer">Управление магазином</h3>
 			<span class="line"></span>
 			<div class="clearfix"></div>
 
 			<ul class="footer-links">
-				<li><a href="#">Профиль</a></li>
+				<li><a href="#">Мой магазин</a></li>
 				<li><a href="#">Мой блог</a></li>
 				<li><a href="#">Мой магазин</a></li>
 			</ul>
@@ -245,7 +245,7 @@
 			<h3 class="headline footer">Контакты</h3>
 			<span class="line"></span>
 			<div class="clearfix"></div>
-			<p>Номер телефона, адрес</p>
+			<p>(499)123-45-67</p>
 		</div>
 
 	</div>
@@ -260,7 +260,7 @@
 	<!-- Container -->
 	<div class="container">
 
-		<div class="eight columns"><a href="/">handmaker.top</a></div>
+		<div class="eight columns"><a href="{% url 'true_index' %}">handmaker.top</a></div>
 		<div class="eight columns">
 		</div>
 
