--- a/theme/templates/shop/product.html
+++ b/theme/templates/shop/product.html
@@ -81,7 +81,7 @@
 			</p>
 
 				<!-- Share Buttons -->
-			<a href="/" class="button">Купить</a>
+			<a href="{% url "true_index" %}" class="button">Купить</a>
 			<!--<div class="share-buttons">
 				<ul>
 					<li><a href="#">Поделиться</a></li>
