--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -802,6 +802,9 @@ a.menu-trigger i {
     width: 100%;
     height: 100%;
     text-align: center;
+    background-image: url();
+    background-size: cover;
+    background-position: 50% center;
 }
 
 .inputfile-1 + label span {
@@ -923,10 +926,13 @@ a.menu-trigger i {
 .inputfile-5 + label:hover figure::after {
     border-bottom-color: #d3394c;
 }
-
+.background-image {
+	/*margin-top: -45%;*/
+}
 .background-image img {
-    height: 150px!important;
-    width: 100%!important;
+    /*height: 150px!important;*/
+    width: 100%;
+    overflow: hidden;
 }
 
 .logo-image img {
