fix js upload file

--- a/theme/templates/filebrowser/upload.html
+++ b/theme/templates/filebrowser/upload.html
@@ -54,7 +54,7 @@
                 <div class="file-input-wrapper">
                     <label class="button hide-in-progress hide-done">
                         Выбрать файл
-                        <input name="Filedata" type="file" />
+                        <input name="Filedata" type="file" accept="image/*"/>
                     </label>
 
                     <div class="progress hide show-in-progress show-done">
