fix admin delete button

--- a/theme/templates/admin/change_list.html
+++ b/theme/templates/admin/change_list.html
@@ -138,7 +138,7 @@
 <!-- 								      <span class="input-group-btn"> -->
 								      
 								    <button type="submit" class="btn" title="Выполнить выбранное действие" name="index" value="1" style="color: rgb(97, 97, 97)!important; margin: 0!important; font-size: inherit;">
-								    <i class="fa fa-minus"></i> <span>Удалить выбранные элементы</span>
+								    <i class="fa fa-minus"></i> <span>Удалить элементы</span>
 								    <div class="ripple-container"></div></button>
 								      <!-- </span> -->
 								    </div>  
